template migrated from lightbend to giter