@@ -1,86 +1,12 @@
-import de.johoop.cpd4sbt.CopyPasteDetector
-
-organization in ThisBuild := "com.knoldus"
-
-version in ThisBuild := "1.0-SNAPSHOT"
-
-scalaVersion in ThisBuild := "2.11.8"
-
-val macwire = "com.softwaremill.macwire" %% "macros" % "2.2.5" % "provided"
-val scalaTest = "org.scalatest" %% "scalatest" % "3.0.1" % Test
-val cassandraApi = "com.datastax.cassandra" % "cassandra-driver-extras" % "3.0.0"
-val mockito = "org.mockito" % "mockito-all" % "1.10.19" % Test
-
-lazy val `lagom-spike` = (project in file("."))
-  .aggregate(`producer-api`, `producer-impl`, `consumer-api`,
-    `consumer-impl`)
-
-
-lazy val `producer-api` = (project in file("producer-api"))
-  .enablePlugins(CopyPasteDetector)
-  .settings(
-    libraryDependencies ++= Seq(
-      lagomScaladslApi
-    )
+// This build is for this Giter8 template.
+// To test the template run `g8` or `g8Test` from the sbt session.
+// See http://www.foundweekends.org/giter8/testing.html#Using+the+Giter8Plugin for more details.
+lazy val root = (project in file(".")).
+  settings(
+    name := "lagom-scala-wordcount",
+    test in Test := {
+      val _ = (g8Test in Test).toTask("").value
+    },
+    scriptedLaunchOpts ++= List("-Xms1024m", "-Xmx1024m", "-XX:ReservedCodeCacheSize=128m", "-XX:MaxPermSize=256m", "-Xss2m", "-Dfile.encoding=UTF-8"),
+    resolvers += Resolver.url("typesafe", url("http://repo.typesafe.com/typesafe/ivy-releases/"))(Resolver.ivyStylePatterns)
   )
-
-lazy val `producer-impl` = (project in file("producer-impl"))
-  .enablePlugins(LagomScala,CopyPasteDetector)
-  .settings(
-    libraryDependencies ++= Seq(
-      lagomScaladslPersistenceCassandra,
-      lagomScaladslTestKit,
-      lagomScaladslKafkaBroker,
-      lagomScaladslKafkaClient,
-      lagomScaladslBroker,
-      cassandraApi,
-      macwire,
-      scalaTest
-    )
-  )
-  .settings(lagomForkedTestSettings: _*)
-  .dependsOn(`producer-api`)
-
-lazy val `consumer-api` = (project in file("consumer-api"))
-  .enablePlugins(CopyPasteDetector)
-  .settings(
-    libraryDependencies ++= Seq(
-      lagomScaladslApi
-    )
-  )
-
-lazy val `consumer-impl` = (project in file("consumer-impl"))
-  .enablePlugins(LagomScala,CopyPasteDetector)
-  .settings(
-    libraryDependencies ++= Seq(
-      lagomScaladslPersistenceCassandra,
-      lagomScaladslTestKit,
-      lagomScaladslKafkaBroker,
-      lagomScaladslKafkaClient,
-      lagomScaladslBroker,
-      cassandraApi,
-      macwire,
-      scalaTest,
-      mockito
-    )
-  )
-  .settings(lagomForkedTestSettings: _*)
-  .dependsOn(`consumer-api`, `producer-api`, `producer-impl`)
-
-
-coverageExcludedPackages in `consumer-impl` :=
-"""sample.helloworldconsumer.impl.HelloConsumerLoader""".stripMargin
-
-coverageExcludedPackages in `producer-impl` :=
-"""sample.helloworld.impl.HelloLoader""".stripMargin
-// End => scoverage exludes files configuration according to projects
-
-/**
-  * Uncomment the below lines if want to use external cassandra and kafka
-  */
-/*
-lagomCassandraEnabled in ThisBuild := false
-lagomUnmanagedServices in ThisBuild := Map("cas_native" -> "http://localhost:9042")
-lagomKafkaEnabled in ThisBuild := false
-lagomKafkaAddress in ThisBuild := "localhost:9092"
-*/
